# day-trade-system

./: .env.example  .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 11b6aee1380f_v1_baseline_schema.py  1f588b56d403_engine_engine_runs_engine_events_bar_.py  2a3c91d70a44_engine_v1_1_dtd_context_lmt_routing_l2_.py  4e1f0a82c9b1_engine_v1_2_sell_anchor.py  7b3a0c5d28f1_engine_v1_3_bootstrap_event_type.py
backend/src/day_trade/: __init__.py  app.py  config.py
backend/src/day_trade/api/: auto_arm.py  candidates.py  dtd.py  engine.py  health.py  rules.py  schemas.py  ws.py
backend/src/day_trade/auto_arm/: __init__.py  policy.py  worker.py
backend/src/day_trade/db/: models.py  session.py
backend/src/day_trade/dtd_control/: __init__.py  controller.py
backend/src/day_trade/engine/: __init__.py  backside.py  bars.py  engine.py  executor.py  exits.py  features.py  ibkr_client.py  indicators.py  instruments.py  journal.py  multitf.py  orderbook.py  portfolio_risk.py  registry.py  risk.py  (+4 more)
backend/tests/: conftest.py  test_api_engine_start_overrides.py  test_auto_arm_policy.py  test_candidates.py  test_dtd_controller.py  test_dtd_parser.py  test_dtd_shared_worker.py  test_engine_backside.py  test_engine_bootstrap.py  test_engine_depth_watchdog.py  test_engine_exits.py  test_engine_features.py  test_engine_journal.py  test_engine_microstructure.py  test_engine_multitf.py  test_engine_portfolio_integration.py  test_engine_portfolio_risk.py  test_engine_registry.py  test_engine_tick.py  test_engine_triggers.py  test_engine_vwap.py  test_filters.py
(+58 files in other folders)
